# sts

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  conanfile.py
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
source/: lib.cpp  main.cpp
source/common/: logger.hpp
test/: CMakeLists.txt
test/source/: sts_test.cpp
